fixed missing space index.html

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -150,6 +150,6 @@ a.card-link:hover,
     opacity: 0.7;
     color: white;
     padding: 10px 15px 30px;
-    height: 300px;
+    height: 900px;
   }
 }
